<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/article_image"
        android:layout_width="126dp"
        android:layout_height="108dp"
        android:layout_marginTop="92dp"
        android:contentDescription="@string/article_image"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_add_article_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/article_name_lin"
        android:layout_marginStart="50dp"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@id/article_image"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/article_name_image"
            android:layout_width="37dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/article_name_image"
            android:src="@drawable/baseline_article_name_24"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="412dp" />

        <EditText
            android:id="@+id/input_article_name"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/enter_article_name"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/article_image"
            app:layout_constraintVertical_bias="0.123" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description_lin"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/article_name_lin"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/article_description_image"
            android:layout_width="36dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/article_description_image"
            android:src="@drawable/baseline_article_description_24"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="412dp" />

        <EditText
            android:id="@+id/input_article_description"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/enter_article_description"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_article_name"
            app:layout_constraintVertical_bias="0.049"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/article_text_lin"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/description_lin"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/article_text_image"
            android:layout_width="36dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/article_text_image"
            android:src="@drawable/baseline_article_text_24"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="412dp" />

        <EditText
            android:id="@+id/input_article_text"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/enter_article_text"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_article_description"
            app:layout_constraintVertical_bias="0.049"
            tools:ignore="MissingConstraints" />

    </LinearLayout>


    <Button
        android:id="@+id/create_article_btn"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/create_article"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_text_lin"
        app:layout_constraintVertical_bias="0.166" />


</androidx.constraintlayout.widget.ConstraintLayout>